# ProveMila-embedded

./: .clang-format  .env  .gitignore  .gitmodules  .mbedignore  CMakeLists.txt  README  README.md  check_format.sh  clean.csv  format.sh  idf_component.yml  install-hooks.sh  mcu_node.hpp  platformio.ini  sdkconfig  sdkconfig.ESP_IMU  sdkconfig.IMU_Basic  sdkconfig.IMU_COMPONENT_FILTERS  sdkconfig.mcu  sdkconfig.motorControllerCANUART  sdkconfig.old  sdkconfig.pedalSensor  vitalsStructs.h
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-spotted.md  feature-request.md  rfc--request-for-comment-.md  rft--request-for-test-.md
.github/workflows/: build-check.yml  check-format.yml
archived/EEPROM_LOGGING/: mcu_romlog.c
components/icm20948/: CMakeLists.txt
generatedSensorCode/: Generatedplatformio.ini
generatedSensorCode/APSensorESP/: main.c
generatedSensorCode/Universal/: sensorHelper.hpp
generatedSensorCode/genericNodeName/: genericNodeName_main.c  genericNodeName_main.cpp  genericNodeNamestaticDec.cpp  myDefines.hpp
generatedSensorCode/rizzSenseArduino/: main.cpp
generatedSensorCode/sampleName/: myDefines.hpp  sampleName_main.cpp  sampleNamestaticDec.cpp
generatedSensorCode/tempSenseArduino/: main.cpp
generatedSensorCode/tempSenseESP/: main.c
generatedVitalsCode/: programConstants.h  vitalsStaticDec.c  vitalsStructs.h
hooks/: pre-commit
include/: programConstants.h
lib/: README
logs/csv/: command.txt  noDriveTest_1.csv  noDriveTest_2.csv
main/: CMakeLists.txt  can_functions.c  can_functions.h  main.c  mutex_declarations.c  mutex_declarations.h  pecan.c  pecan.h  programConstants.h  ptypes.h  vitalsHelper.c  vitalsHelper.h
main/pecan/: espSpecific.c
main/vitalsHelper/: vitalsHelper.c  vitalsHelper.h  vitalsStaticDec.c  vitalsStaticDec.h  vitalsStructs.h
rust/blink-hal/: Cargo.toml  Embed.toml  README.md  build.rs
rust/blink-hal/.cargo/: config.toml
rust/blink-hal/c_src/: pecan.h  pecan_common.c  programConstants.h  wrapper.h
rust/blink-hal/src/: ffi.rs  hw.rs  main.rs  programConstants.rs  vsense.rs
schemas/: vsr.fbs
scripts/: Makefile  codeGen_main.py  code_gen.py  constantGen.py  genSensors.py  genTelemetry.py  genVitals.py  packet_config.hpp  packet_config.java  parseFile.py  sensors.def  simpleTest.def  uart_gen.cpp  uart_parse.java  vitals_code_gen.py
scripts/Gen_For_sensors/: Generatedplatformio.ini
setup/: .gitignore  README.md  build_flatc.sh  reinstall_fb_headers.sh
src/: CMakeLists.txt  logging.cpp  logging.h  main.cpp  preChargeCan.cpp  programConstants.h
src/CAN_to_UART/: UART_Com.h  UART_recv.cpp  UART_send.cpp  checksum.cpp  main.cpp
src/EEPROM/: EEPROM.c  EEPROM.h  main.c
src/ESP_IMU_Sample/: main.cpp
src/IMU/: main.c  main.h  real_main.c
src/IMU_Basic/: main.c
src/IMU_Component_Filters/: circularArray.cpp  circularArray.h  main.cpp  sample.cpp  sample.hpp
src/IMU_Sample/: main.c
src/Logging/: arduinoSpecific.cpp  arduino_logging.cpp  espSpecific.cpp  logger.cpp  logging.h
src/PreChargeCan/: main.c
src/PreChargeCanTest/: main.c
src/PrechargeCircuit/: precharge.cpp
src/SD_Reader/: main.c
src/SD_card_Test/: SD_logger.c  main.c  tasks.h
src/accelerometer/: main.cpp  mpu6050.h
src/arch/: arduino.cpp  mbed.cpp
src/arduino/: arduinoSched.cpp  arduinoSched.hpp  mbed.cpp
src/arduinoSched/: arduinoSched.cpp  arduinoSched.hpp
src/common/: README.md  gen_events.cpp  gen_impl.cpp  gen_packet.cpp  gen_sched.cpp  pecan.hpp  ptypes.hpp
src/common/arch/: arduino.cpp
src/common/arduino/: arch.cpp
src/cyberGearICM/: ak09916_enumerations.h  ak09916_registers.h  icm20948.c  icm20948.h  icm20948_enumerations.h  icm20948_i2c.c  icm20948_i2c.h  icm20948_registers.h
src/espBase/: debug_esp.c  debug_esp.h
src/espMutexes/: mutex_declarations.c  mutex_declarations.h  vitalsData.c  vitalsData.h  vitalsHB.h
src/generatedCode/: SpeedSensor1.cpp  TemperatureSensor1.cpp  TirePressureSensor1.cpp  TirePressureSensor2.cpp
src/high_load_node/: main.cpp
src/icm20948/: REAMDE.md  icm20948.c
src/mcu/: README.md  h300.c  h300.h  main.c  main.txt  tasks.h  vsr.c  vsr.h  vsr_motor.h
src/mcu/tasks/: SD_logger.c  can_read.c  console.c  handle_h300.c  mcu_romlog.c  print_vsr.c  print_vsr.h  tasks.h
src/mcu/tasks/EEPROM/: EEPROM.h
src/mcu_node/: README.md  main.cpp  mcu.h  mcu_node.hpp  uart_gen.cpp  uart_gen.hpp
src/motorConfig/: main.c
src/pecan/: arduinoSpecific.cpp  common.cpp  espBusRestart.h  espSpecific.c  pecan.h  vitalsInit.c
src/read_MCU_EEPROM/: main.c
src/rf_test_receiver/: main.cpp
src/rf_test_sender/: main.cpp
src/sensors/APSensorArduino/: main.cpp  myDefines.hpp  staticDec.cpp
src/sensors/APSensorESP/: main.c
src/sensors/common/: sensorHelper.cpp  sensorHelper.hpp
src/sensors/genericNodeName/: genericNodeName_main.cpp  genericNodeNamestaticDec.cpp  myDefines.hpp
src/sensors/genericNodeNameESP/: genericNodeNameESP_main.c  genericNodeName_main.c  genericNodeNamestaticDec.cpp
src/sensors/pedalSensor/: main.c  main.cpp  myDefines.hpp  pedalInterpolation.c  pedalInterpolation.h  pedal_sensor.c  pedal_sensor.h  staticDec.cpp
src/sensors/powerSensor/: espPower.c  powerSensor.h
src/sensors/rizzSenseArduino/: main.cpp
src/sensors/sampleName/: myDefines.hpp  sampleName_main.cpp  sampleNamestaticDec.cpp
src/sensors/sensor_name1/: myDefines.hpp  revisedSensor.cpp  sensorStaticDec.cpp
src/sensors/tempSenseArduino/: main.cpp
src/sensors/tempSenseESP/: main.c
src/telemetry_node/: README.md  main.cpp
src/vitalsNode/: main.c  mutex_declarations.c  programConstants.h  vitalsData.c  vitalsHB.c  vitalsHB.h
src/vitalsNode/vitalsHelper/: vitalsHelper.c  vitalsHelper.h  vitalsStaticDec.c  vitalsStaticDec.h  vitalsStructs.h
src/vitals_node/: ProveMila-embedded.code-workspace  README.md  main.cpp  mainsolo.cpp  mbedVitals.cpp  revisedSensor.cpp  sensor.cpp  sensorHelper.cpp  sensorHelper.hpp
src/vitals_node_deprecated/: freeVitals.cpp  main.cpp  mainsolo.cpp  mbedVitals.cpp  sensor.cpp
test/: README
(+31 files in other folders)
